--- a/feature_engineering_BT.ipynb
+++ b/feature_engineering_BT.ipynb
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "9       False               False  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1736,7 @@
        "[10 rows x 84 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,14 +1767,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Python\\lib\\site-packages\\sklearn\\utils\\validation.py:1688: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 659.599170039187\n"
+      "RMSE: 656.8342991230944\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\Python\\lib\\site-packages\\sklearn\\utils\\validation.py:1688: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -1798,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1822,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,38 +1851,51 @@
     "model = MLP(input_size, hidden_size, output_size)\n",
     "\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+    "optimizer = optim.Adam(model.parameters())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5, Loss: 3672.027140828645\n",
-      "Epoch 10, Loss: 3664.961871499295\n",
-      "Epoch 15, Loss: 3660.279273907187\n",
-      "Epoch 20, Loss: 3656.2096048594753\n",
-      "Epoch 25, Loss: 3654.6970225242935\n",
-      "Epoch 30, Loss: 3654.0650122823213\n",
-      "Epoch 35, Loss: 3653.659476440055\n",
-      "Epoch 40, Loss: 3653.390314976262\n",
-      "Epoch 45, Loss: 3653.1736656415947\n",
-      "Epoch 50, Loss: 3653.0014359948646\n"
+      "Epoch 5, Loss: 3666.326139165548\n",
+      "Epoch 10, Loss: 3655.6807464711696\n",
+      "Epoch 15, Loss: 3650.2650832915388\n",
+      "Epoch 20, Loss: 3647.3660898896137\n",
+      "Epoch 25, Loss: 3643.62147038416\n",
+      "Epoch 30, Loss: 3641.956599125159\n",
+      "Epoch 35, Loss: 3639.499125236156\n",
+      "Epoch 40, Loss: 3638.57650219873\n",
+      "Epoch 45, Loss: 3636.6409877254823\n",
+      "Epoch 50, Loss: 3635.6278549287667\n",
+      "Epoch 55, Loss: 3634.7618838832227\n",
+      "Epoch 60, Loss: 3634.030489150485\n",
+      "Epoch 65, Loss: 3633.546725588919\n",
+      "Epoch 70, Loss: 3632.51207940342\n",
+      "Epoch 75, Loss: 3631.901061510019\n",
+      "Epoch 80, Loss: 3631.7648702259157\n",
+      "Epoch 85, Loss: 3631.351106011241\n",
+      "Epoch 90, Loss: 3630.7597606379745\n",
+      "Epoch 95, Loss: 3630.3212136016223\n",
+      "Epoch 100, Loss: 3630.319933446797\n",
+      "CPU times: total: 14min 35s\n",
+      "Wall time: 11min 3s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "X_train = torch.Tensor(X_train.values)\n",
     "y_train = torch.Tensor(y_train.values)\n",
     "X_test = torch.Tensor(X_test.values)\n",
     "y_test = torch.Tensor(y_test.values)\n",
     "\n",
-    "epochs = 50\n",
+    "epochs = 100\n",
     "batch_size = 128\n",
     "\n",
     "for epoch in range(epochs):\n",
@@ -1899,14 +1928,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test RMSE: 656.583938845598\n"
+      "Test RMSE: 654.1875925527784\n"
      ]
     }
    ],
